Terminando el proyecto

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -320,3 +320,12 @@ h1{
     width: 4em;
     height: 4em;
 }
+.enPausa{
+    background-image: url("../img/juegoEnPausa.gif");
+}
+.porDefecto{
+    background-color: green;
+}
+.hidden {
+    display: none;
+}
